--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,11 +24,12 @@
 
 @media (max-width: 768px) {
   .header {
-    background-color: var(--bg-primary);
-    backdrop-filter: none;
     padding: 10px 20px;
   }
   .container {
     justify-content: space-between;
+  }
+  #logo2{
+    display:none !important;
   }
 }
