--- a/src/components/Navigation/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.scss
@@ -4,7 +4,7 @@
   top: 0;
   z-index: 100;
   height: 100vh;
-  width: 70%;
+  width: 70px;
   background: var(--bg-primary);
   box-shadow: var(--drawer-shadow);
 }
