--- a/src/scenes/Home/MainSection/MainSection.module.scss
+++ b/src/scenes/Home/MainSection/MainSection.module.scss
@@ -52,13 +52,14 @@
 }
 
 .typewriterWrapper {
-  font-size: 2.2em;
-  color: #be6adf;
+  font-size: 1.9em;
+  color: rgb(45, 99, 143);
   font-weight: 600;
 }
 .typewriterCursor {
   font-size: 2.4em;
-  color: #b562d6;
+  color: #888;
+  font-weight: lighter;
 }
 
 @media (max-width: 1225px) {
