--- a/src/scenes/Resume/Resume.module.scss
+++ b/src/scenes/Resume/Resume.module.scss
@@ -19,7 +19,6 @@
   width: 35%;
   min-width: 120px;
   padding: 1rem;
-
   img {
     width: 100%;
     height: auto;
@@ -27,7 +26,7 @@
   }
 
   .hero-svg2 {
-    fill: #8a4ca8;
+    fill: dodgerblue;
   }
 }
 
